[package]
name = "wecom"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE"

description = "Asnyc Client for WeCom"
homepage = "https://github.com/zwpaper/wecom"
documentation = "https://github.com/zwpaper/wecom"
repository = "https://github.com/zwpaper/wecom"
readme = "README.md"

keywords = ["wecom", "async", "client"]
categories = ["accessibility", "asynchronous", "api-bindings"]


[dependencies]
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
